* Adding #113 copy video track option (thanks to leonardyan)
* Adding |=====  | Progress Bars
* Adding support for interlaced videos
* Adding option to download newest FFmpeg on Windows
* Adding builds for MacOS and Linux
* Adding --test (imports only) and --version startup options
* Adding option to clean old (over2 weeks) logs by compressing them
* Changing to a model based dataclass setup with a large internal re-write
* Changing so it opens the file dialog for new video to last used directory
* Changing log names, including file output stem in conversion log
* Fixing #116 how HDR10 options for x265 work (thanks to HannesJo0139)
* Fixing dispositions being set for wrong tracks (thanks to ftpmorph)
* Fixing thumbnails not being generated properly on 10-bit non bt2020 files
* Fixing QThread destroyed message on close

## Version  3.4.3

* Fixing #110 (multi) no warning for those updating about automatic burn-in subtitles (thanks to loungebob)
* Fixing #110 (multi) no option to disable automatic subtitle burn-in behavior  (thanks to loungebob)
* Fixing #110 (multi) waiting cursor may not go away by removing for now (thanks to loungebob)
* Fixing timeout for covers extraction not working
* Fixing changing settings without video would crash GUI

## Version  3.4.2

* Fixing color space details being passed correctly to everything other than x265 as well
* Fixing HDR10+ details on README
* Fixing #102 better with taking into account master-display ratios (thanks to leonardyan)
* Fixing VP9 to accept profiles so HDR10 can be copied properly
* Fixing #108 HEVC can select wrong video track for encoding (thanks to Zeid164)

## Version  3.4.1

* Fixing #102 color space and HDR details not parsed from webm correctly (thanks to leonardyan)
* Fixing no warning messages for HDR10+ experimental feature

## Version  3.4.0

* Adding #83 HDR10+ support for x265 (thanks to SlashX)
* Adding x265 params hdr10, hdr10-opt, aq-mode and repeat-headers