@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-__version__ = "4.0.0b6"
+__version__ = "4.0.0b7"
 __author__ = "Chris Griffith"
